--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vue/cli": "^4.3.1",
     "@vue/cli-service": "~4.3.0",
+    "babel-loader": "^9.1.0",
     "core-js": "^3.6.5",
     "delay": "^4.3.0",
     "mdbvue": "^5.8.3",
